fix: alignment of the pages in navigation page in mobile view.

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -131,5 +131,6 @@ blockquote {
   body > nav > ul > li:not(:last-child)::after {
     content: "|";
     margin: 0 0.4em;
+    padding-left: 0.24em;
   }
 }
